# Fantasy-Map-Generator

./: Cargo.toml  index.css  index.html  main.js  old-main.js  server.py
modules/: burgs-and-states.js  cultures-generator.js  heightmap-generator.js  names-generator.js  ocean-layers.js  relief-icons.js  religions-generator.js  river-generator.js  routes-generator.js  ui-util.js  utils.js
modules/ui/: biomes-editor.js  burg-editor.js  burgs-editor.js  cultures-editor.js  diplomacy-editor.js  editors.js  general.js  heightmap-editor.js  labels-editor.js  layers.js  markers-editor.js  measurers.js  namesbase-editor.js  notes-editor.js  provinces-editor.js  relief-editor.js  religions-editor.js  rivers-editor.js  routes-editor.js  states-editor.js  tools.js  units-editor.js  world-configurator.js  zones-editor.js
src/: heightmap.rs  lib.rs  main.rs  svg_map.rs  svg_test.rs  util.rs  voronoi.rs
